@@ -17,9 +17,11 @@
 
 package org.openqa.selenium.bidi;
 
+import static java.util.Collections.emptyMap;
+
 import java.io.Closeable;
 import java.time.Duration;
-import java.util.Collections;
+import java.util.List;
 import java.util.Map;
 import java.util.Set;
 import java.util.function.Consumer;
@@ -70,9 +72,7 @@ public class BiDi implements Closeable {
     Require.nonNull("Event to listen for", event);
     Require.nonNull("Handler to call", handler);
 
-    send(
-        new Command<>(
-            "session.subscribe", Map.of("events", Collections.singletonList(event.getMethod()))));
+    send(new Command<>("session.subscribe", Map.of("events", List.of(event.getMethod()))));
 
     return connection.addListener(event, handler);
   }
@@ -85,11 +85,7 @@ public class BiDi implements Closeable {
     send(
         new Command<>(
             "session.subscribe",
-            Map.of(
-                "contexts",
-                Collections.singletonList(browsingContextId),
-                "events",
-                Collections.singletonList(event.getMethod()))));
+            Map.of("contexts", List.of(browsingContextId), "events", List.of(event.getMethod()))));
 
     return connection.addListener(event, handler);
   }
@@ -102,11 +98,7 @@ public class BiDi implements Closeable {
     send(
         new Command<>(
             "session.subscribe",
-            Map.of(
-                "contexts",
-                browsingContextIds,
-                "events",
-                Collections.singletonList(event.getMethod()))));
+            Map.of("contexts", browsingContextIds, "events", List.of(event.getMethod()))));
 
     return connection.addListener(event, handler);
   }
@@ -117,11 +109,7 @@ public class BiDi implements Closeable {
     // The browser throws an error if we try to unsubscribe an event that was not subscribed in the
     // first place
     if (connection.isEventSubscribed(event)) {
-      send(
-          new Command<>(
-              "session.unsubscribe",
-              Map.of("events", Collections.singletonList(event.getMethod()))));
-
+      send(new Command<>("session.unsubscribe", Map.of("events", List.of(event.getMethod()))));
       connection.clearListener(event);
     }
   }
@@ -135,6 +123,6 @@ public class BiDi implements Closeable {
   }
 
   public BiDiSessionStatus getBidiSessionStatus() {
-    return send(new Command<>("session.status", Collections.emptyMap(), BiDiSessionStatus.class));
+    return send(new Command<>("session.status", emptyMap(), BiDiSessionStatus.class));
   }
 }
